feat: update the get groups endpoint to only include user's groups
Signed-off-by: Rabindra Baisnab <i1000862@verisk.com>